--- a/src/manifest.json
+++ b/src/manifest.json
@@ -16,6 +16,18 @@
     "default_popup": "html/popup.html",
     "default_title": "__MSG_extensionName__"
   },
+  "content_scripts": [
+    {
+      "all_frames": false,
+      "js": [
+        "js/content.js"
+      ],
+      "matches": [
+        "<all_urls>"
+      ],
+      "run_at": "document_idle"
+    }
+  ],
   "default_locale": "en",
   "description": "__MSG_extensionDescription__",
   "homepage_url": "https://github.com/asamuzaK/sharePage",
