--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
   "applications": {
     "gecko": {
-      "id": "sharePage@asamuzak.jp",
+      "id": "shareSNS@asamuzak.jp",
       "strict_min_version": "57.0a1"
     }
   },
@@ -30,7 +30,7 @@
   ],
   "default_locale": "en",
   "description": "__MSG_extensionDescription__",
-  "homepage_url": "https://github.com/asamuzaK/sharePage",
+  "homepage_url": "https://github.com/asamuzaK/shareSNS",
   "icons": {
     "32": "icon.svg#context",
     "64": "icon.svg"
