--- a/src/manifest.json
+++ b/src/manifest.json
@@ -6,9 +6,7 @@
     }
   },
   "background": {
-    "scripts": [
-      "js/background.js"
-    ]
+    "page": "html/background.html"
   },
   "browser_action": {
     "browser_style": true,
