--- a/src/manifest.json
+++ b/src/manifest.json
@@ -35,9 +35,15 @@
   },
   "manifest_version": 2,
   "name": "__MSG_extensionName__",
+  "options_ui": {
+    "browser_style": false,
+    "open_in_tab": true,
+    "page": "html/options.html"
+  },
   "permissions": [
     "activeTab",
     "menus",
+    "storage",
     "tabs"
   ],
   "short_name": "__MSG_extensionShortName__",
