--- a/src/manifest.json
+++ b/src/manifest.json
@@ -14,13 +14,13 @@
     "default_title": "__MSG_extensionName__",
     "theme_icons": [
       {
-        "light": "icon.svg#light",
-        "dark": "icon.svg#dark",
+        "light": "img/icon.svg#light",
+        "dark": "img/icon.svg#dark",
         "size": 16
       },
       {
-        "light": "icon.svg#light",
-        "dark": "icon.svg#dark",
+        "light": "img/icon.svg#light",
+        "dark": "img/icon.svg#dark",
         "size": 32
       }
     ]
@@ -41,8 +41,8 @@
   "description": "__MSG_extensionDescription__",
   "homepage_url": "https://github.com/asamuzaK/shareSNS",
   "icons": {
-    "32": "icon.svg#gray",
-    "64": "icon.svg"
+    "32": "img/icon.svg#current",
+    "64": "img/icon.svg"
   },
   "manifest_version": 2,
   "name": "__MSG_extensionName__",
