--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,7 +2,7 @@
   "applications": {
     "gecko": {
       "id": "shareSNS@asamuzak.jp",
-      "strict_min_version": "57.0a1"
+      "strict_min_version": "60.0"
     }
   },
   "background": {
