--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "mocha": "^5.2.0",
     "npm-run-all": "^4.1.3",
     "nyc": "^13.1.0",
-    "sinon": "^7.1.1"
+    "sinon": "^7.1.1",
+    "sinon-chrome": "^2.3.2"
   },
   "version": "2.1.0"
 }
