--- a/package.json
+++ b/package.json
@@ -29,12 +29,11 @@
     "eslint": "^6.8.0",
     "eslint-plugin-no-unsanitized": "^3.0.2",
     "jsdom": "^16.0.1",
-    "mocha": "^7.0.0",
+    "mocha": "^7.0.1",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.0.0",
-    "sinon": "^8.1.0",
-    "webext-schema": "^1.0.0"
+    "sinon": "^8.1.1",
+    "webext-schema": "^1.1.0"
   },
-  "version": "3.0.3",
-  "dependencies": {}
+  "version": "3.0.3"
 }
