--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "scripts": {
     "lint": "npm-run-all -s lint:*",
     "lint:addons-linter": "addons-linter src",
-    "lint:eslint": "eslint .",
+    "lint:eslint": "standardx --fix .",
     "test": "npm run test:central",
     "test:beta": "nyc --reporter=text mocha test/*.test.js --require test/mocha/setup.js --channel=beta --require @babel/register --exit",
     "test:central": "nyc --reporter=text mocha test/*.test.js --require test/mocha/setup.js --channel=central --require @babel/register --exit",
@@ -39,6 +39,7 @@
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
     "sinon": "^9.2.1",
+    "standardx": "^7.0.0",
     "webext-schema": "^1.3.14"
   },
   "version": "3.1.0"
