--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@babel/register": "^7.12.1",
     "addons-linter": "^2.11.0",
     "chai": "^4.2.0",
+    "eslint": "^7.13.0",
     "eslint-plugin-jsdoc": "^30.7.7",
     "eslint-plugin-no-unsanitized": "^3.1.4",
     "jsdom": "^16.4.0",
