--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sharesns",
-  "description": "Share page or link with social networking services.",
+  "description": "Share page or link on social networking services.",
   "author": "asamuzaK",
   "homepage": "https://github.com/asamuzaK/shareSNS",
   "bugs": {
