--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "lint:html": "html-validate src/html/*.html",
     "lint:style": "stylelint --fix src/css/*.css",
     "test": "npm run test:central",
-    "test:beta": "c8 --reporter=text mocha test/*.test.js --require test/mocha/setup.js --channel=beta --exit",
-    "test:central": "c8 --reporter=text mocha test/*.test.js --require test/mocha/setup.js --channel=central --exit",
-    "test:esr": "c8 --reporter=text mocha test/*.test.js --require test/mocha/setup.js --channel=esr --exit",
-    "test:release": "c8 --reporter=text mocha test/*.test.js --require test/mocha/setup.js --channel=release --exit",
+    "test:beta": "c8 mocha test/*.test.js --require test/mocha/setup.js --channel=beta --exit",
+    "test:central": "c8 mocha test/*.test.js --require test/mocha/setup.js --channel=central --exit",
+    "test:esr": "c8 mocha test/*.test.js --require test/mocha/setup.js --channel=esr --exit",
+    "test:release": "c8 mocha test/*.test.js --require test/mocha/setup.js --channel=release --exit",
     "test_all": "npm-run-all -s test:*"
   },
   "dependencies": {
