--- a/package.json
+++ b/package.json
@@ -14,39 +14,39 @@
   "type": "module",
   "scripts": {
     "include": "copyfiles --up=3 --verbose node_modules/webext-schema/modules/browser.js src/mjs",
-    "lint": "npm-run-all -s lint:*",
-    "lint:addons-linter": "addons-linter src",
-    "lint:eslint": "eslint --fix .",
-    "lint:html": "html-validate src/html/*.html",
-    "lint:style": "stylelint --fix src/css/*.css",
-    "test": "npm run test:central",
-    "test:beta": "c8 mocha --require=test/mocha/setup.js --channel=beta --exit test/*.test.js",
-    "test:central": "c8 mocha --require=test/mocha/setup.js --channel=central --exit test/*.test.js",
-    "test:esr": "c8 mocha --require=test/mocha/setup.js --channel=esr --exit test/*.test.js",
-    "test:release": "c8 mocha --require=test/mocha/setup.js --channel=release --exit test/*.test.js",
-    "test_all": "npm-run-all -s test:*"
+    "lint": "npm-run-all -s lint-*",
+    "lint-addons-linter": "addons-linter src",
+    "lint-eslint": "eslint --fix .",
+    "lint-html": "html-validate src/html/*.html",
+    "lint-style": "stylelint --fix src/css/*.css",
+    "test": "npm run test-central",
+    "test-beta": "c8 mocha --require=test/mocha/setup.js --channel=beta --exit test/*.test.js",
+    "test-central": "c8 mocha --require=test/mocha/setup.js --channel=central --exit test/*.test.js",
+    "test-esr": "c8 mocha --require=test/mocha/setup.js --channel=esr --exit test/*.test.js",
+    "test-release": "c8 mocha --require=test/mocha/setup.js --channel=release --exit test/*.test.js",
+    "test_all": "npm-run-all -s test-*"
   },
   "dependencies": {
-    "webext-schema": "^4.0.0"
+    "webext-schema": "^4.1.0"
   },
   "devDependencies": {
-    "addons-linter": "^5.7.0",
+    "addons-linter": "^5.9.0",
     "c8": "^7.11.3",
     "chai": "^4.3.6",
     "copyfiles": "^2.4.1",
-    "eslint": "^8.17.0",
+    "eslint": "^8.18.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsdoc": "^39.3.2",
+    "eslint-plugin-jsdoc": "^39.3.3",
     "eslint-plugin-no-unsanitized": "^4.0.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.0.0",
     "html-validate": "^7.1.1",
-    "jsdom": "^19.0.0",
+    "jsdom": "^20.0.0",
     "mocha": "^10.0.0",
     "npm-run-all": "^4.1.5",
     "sinon": "^14.0.0",
-    "stylelint": "^14.9.0",
+    "stylelint": "^14.9.1",
     "stylelint-config-standard": "^26.0.0"
   },
   "version": "4.0.5"
