--- a/src/manifest.json
+++ b/src/manifest.json
@@ -7,19 +7,7 @@
     "browser_style": true,
     "default_icon": "img/icon.svg#current",
     "default_popup": "html/popup.html",
-    "default_title": "__MSG_extensionName__",
-    "theme_icons": [
-      {
-        "dark": "img/icon.svg#dark",
-        "light": "img/icon.svg#light",
-        "size": 16
-      },
-      {
-        "dark": "img/icon.svg#dark",
-        "light": "img/icon.svg#light",
-        "size": 32
-      }
-    ]
+    "default_title": "__MSG_extensionName__"
   },
   "browser_specific_settings": {
     "gecko": {
@@ -35,6 +23,7 @@
   "description": "__MSG_extensionDescription__",
   "homepage_url": "https://github.com/asamuzaK/shareSNS",
   "icons": {
+    "16": "img/icon.svg#current",
     "32": "img/icon.svg#current",
     "64": "img/icon.svg"
   },
