--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
   "dependencies": {
     "commander": "^10.0.0",
     "dompurify": "^3.0.0",
+    "typescript": "^4.9.5",
     "url-sanitizer": "^0.9.5",
-    "webext-schema": "^5.1.4"
+    "webext-schema": "^5.1.5"
   },
   "devDependencies": {
     "addons-linter": "^5.28.0",
@@ -54,7 +55,8 @@
     "test-central": "c8 mocha --require=test/mocha/setup.js --channel=central --exit test/*.test.js",
     "test-esr": "c8 mocha --require=test/mocha/setup.js --channel=esr --exit test/*.test.js",
     "test-release": "c8 mocha --require=test/mocha/setup.js --channel=release --exit test/*.test.js",
-    "test_all": "npm-run-all -s test-*"
+    "test_all": "npm-run-all -s test-*",
+    "tsc": "node index clean --dir=types -i && npx tsc"
   },
   "version": "6.3.1"
 }
