--- a/.eslintrc
+++ b/.eslintrc
@@ -14,8 +14,18 @@
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
+  "plugins": [
+    "eslint-plugin-import",
+    "unicorn"
+  ],
   "reportUnusedDisableDirectives": true,
   "rules": {
+    "import/order": ["error", {
+      "alphabetize": {
+        "order": "ignore",
+        "caseInsensitive": false
+      }
+    }],
     "no-await-in-loop": "error",
     "no-use-before-define": ["error", {
       "allowNamedExports": false,
@@ -28,6 +38,7 @@
       "anonymous": "always",
       "asyncArrow": "always",
       "named": "never"
-    }]
+    }],
+    "unicorn/prefer-node-protocol": "error"
   }
 }
