--- a/package.json
+++ b/package.json
@@ -15,22 +15,22 @@
   "dependencies": {
     "commander": "^10.0.0",
     "dompurify": "^3.0.0",
-    "typescript": "^4.9.5",
-    "url-sanitizer": "^0.9.5",
-    "webext-schema": "^5.1.5"
+    "url-sanitizer": "^0.9.8",
+    "webext-schema": "^5.1.7"
   },
   "devDependencies": {
-    "addons-linter": "^5.28.0",
+    "addons-linter": "^5.30.0",
     "c8": "^7.13.0",
     "chai": "^4.3.7",
     "copyfiles": "^2.4.1",
-    "eslint": "^8.34.0",
+    "eslint": "^8.35.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsdoc": "^40.0.0",
     "eslint-plugin-no-unsanitized": "^4.0.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-regexp": "^1.12.0",
     "eslint-plugin-unicorn": "^45.0.2",
     "html-validate": "^7.13.2",
     "jsdom": "^21.1.0",
@@ -39,6 +39,7 @@
     "sinon": "^15.0.1",
     "stylelint": "^15.2.0",
     "stylelint-config-standard": "^30.0.1",
+    "typescript": "^4.9.5",
     "undici": "^5.20.0"
   },
   "scripts": {
